--- a/02-lightbox.html
+++ b/02-lightbox.html
@@ -15,5 +15,10 @@
     <ul class="gallery"></ul>
 
     <script src="js/02-lightbox.js" type="module"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.12.1/simple-lightbox.min.js"></script>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/2.12.1/simple-lightbox.min.css"
+      rel="stylesheet"
+    />
   </body>
 </html>
